--- a/views/search.html
+++ b/views/search.html
@@ -1,19 +1,23 @@
 ﻿<div class="search-page">
 
     <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>
-    
+
     <div ng-hide="fatalError || !isOnline">
-        <div ng-switch on="!!searchTerm">
+        <div ng-switch on="!!searchText" class="search-header">
             <div class="search-term" ng-switch-when="true">
-                מציג תוצאות חיפוש עבור "{{searchTerm}}"
+                <h4 class="title">
+                    מציג תוצאות חיפוש עבור "{{searchText}}"
+                </h4>
+
             </div>
             <div ng-switch-default>
-                <ul class="full-path">
-                    <li class="main-bread-cramb" ng-hide="true">ראשי <span>&gt;</span> </li>
-                    <li class="ancestor" ng-if="currentCategory.parent.parent" ng-hide="true">{{currentCategory.parent.parent.title}} <span>&gt;</span> </li>
-                    <li class="parent" ng-click="selectCategoryById(currentCategory.parent.id)" ng-if="currentCategory.parent" ng-hide="true">{{currentCategory.parent.title}} <span>&gt;</span> </li>
-                    <li class="current-category">מוצרים נבחרים בקטגורית {{currentCategory.title}}</li>
-                </ul>
+                <h4 class="title">
+
+                    <span class="ancestor" ng-if="currentCategory.parent.parent" ng-hide="true">{{currentCategory.parent.parent.title}} <span>&gt;</span> </span>
+                    <span class="parent" ng-click="selectCategoryById(currentCategory.parent.id)" ng-if="currentCategory.parent" ng-hide="true">{{currentCategory.parent.title}} <span>&gt;</span> </span>
+                    <span class="current-category">מוצרים נבחרים בקטגורית {{currentCategory.title}}</span>
+
+                </h4>
                 <ul class="filter-path">
                     <li class="filters-on-path" ng-repeat="filter in selectedFilterValues.values" ng-show="isFilterValueNotEmpty(filter.value)">
                         {{filter.value.title}} <span>|</span>
@@ -25,13 +29,13 @@
                 </ul>
             </div>
         </div>
-        <ws-loading ng-show="loading" ></ws-loading>
+        <ws-loading ng-show="loading"></ws-loading>
         <div class="products-list-container clear"
              n-g-swipe-right="navigateNext()"
              n-g-swipe-left="navigateBack()"
              ng-hide="loading"
              ng-class="{ 'next-animation' : movedToNext, 'previous-animation' : movedToPrevious}">
-            <div class="no-products" ng-show="!loading && !currentProductsPage1.length">לא קיימים מוצרים בקטגוריה</div>
+            <div class="no-products" ng-show="!loading && !currentProductsPage1.length">לצערנו לא נמצאו תוצאות עבור "{{searchText}}"</div>
             <div class="products-list-content" ng-show="productsLine1.length">
                 <div class="products-list-stable">
                     <div class="hider reverse" ng-show="isScrollingRight"></div>
@@ -46,9 +50,11 @@
             <div class="search-right-arrow bottom" ng-show="canNavigateBack()"><i class="fa fa-chevron-right"></i></div>
         </div>
 
-        <div class="footer" ng-hide="!loading && !currentProductsPage1.length">
+        <div class="footer" ng-show="!loading && currentProductsPage1.length>0 && currentCategory.level == 2">
+
             <div class="products-comparison-wrapper">
-                <div class="comparison-products" >
+                <div class="comparison-products">
+                    <div class="compare-hint" ng-show="!productsToCompare || productsToCompare.length == 0">סמנו מוצרים להשוואה</div>
                     <div class="comparison-products-container" ng-repeat="product in productsToCompare">
                         <div class="remove-product" ng-click="publishRemoveProduct(product)">
                             <i class="fa fa-times"></i>
@@ -58,7 +64,7 @@
                     </div>
 
                 </div>
-                <div class="go-to-comparison" ng-show="isAnyProductSelected()" ng-click="openCamperisonPage()">להשוואה</div>
+                <div class="go-to-comparison" ng-show="areProductsSelected()" ng-click="openCamperisonPage()">להשוואה</div>
             </div>
         </div>
 
