--- a/app/css/app.css
+++ b/app/css/app.css
@@ -406,8 +406,13 @@ input[type=submit].search-button {
     .product:first-child {
         border-right: solid 1px lightgrey;
     }
-
-.product-border {
+    .product {
+    position: relative;
+    overflow: hidden;
+    padding: 12px 2px 12px 2px;
+    background-color: white;
+}
+.product {
     background: #E7E7E7; /* Old browsers */
     background: -moz-linear-gradient(top, #E7E7E7 1%, #ffffff 12%, #ffffff 88%, #E7E7E7 100%, #cccccc 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#E7E7E7), color-stop(12%,#ffffff), color-stop(88%,#ffffff), color-stop(100%,#E7E7E7), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
@@ -423,12 +428,6 @@ div, i {
     -webkit-user-select: none;
 }
 
-.product-border {
-    position: relative;
-    overflow: hidden;
-    padding: 6px 2px 6px 2px;
-    background-color: white;
-}
 
 
 
@@ -492,12 +491,13 @@ div, i {
     font-size: 7.7pt;
 }
 
-.price b {
+.price {
     font-size: 10pt;
 }
 
 .average-price {
     text-decoration: line-through;
+    font-weight: bold;
 }
 
 .price .space {
