--- a/app/css/app.css
+++ b/app/css/app.css
@@ -128,7 +128,7 @@ header {
 .category {
     background-color: transparent;
     border: none;
-    font-size: 14pt;
+    font-size: 18px;
     outline: none;
 }
 
@@ -220,8 +220,8 @@ input[type=submit].search-button {
     box-shadow: none;
     margin: 0;
     padding: 0;
-    font-size: 24px;
-    line-height: 40px;
+    font-size: 18px;
+    line-height: 36px;
     text-indent: .2em;
     background-color: transparent;
 }
@@ -303,7 +303,6 @@ input[type=submit].search-button {
     position: relative;
     overflow: hidden;
     width: 645px;
-    pointer-events: none;
 }
 
 .promotion {
@@ -373,7 +372,7 @@ input[type=submit].search-button {
     }
 
 .no-products {
-    font-size: 14pt;
+    font-size: 17px;
     margin-top: 6px;
     margin-bottom: 6px;
 }
@@ -413,14 +412,8 @@ input[type=submit].search-button {
     background-color: white;
 }
 .product {
-    background: #E7E7E7; /* Old browsers */
-    background: -moz-linear-gradient(top, #E7E7E7 1%, #ffffff 12%, #ffffff 88%, #E7E7E7 100%, #cccccc 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#E7E7E7), color-stop(12%,#ffffff), color-stop(88%,#ffffff), color-stop(100%,#E7E7E7), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #E7E7E7 1%,#ffffff 12%,#ffffff 88%,#E7E7E7 100%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #E7E7E7 1%,#ffffff 12%,#ffffff 88%,#E7E7E7 100%,#cccccc 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #E7E7E7 1%,#ffffff 12%,#ffffff 88%,#E7E7E7 100%,#cccccc 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #E7E7E7 1%,#ffffff 12%,#ffffff 88%,#E7E7E7 100%,#cccccc 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E7E7E7', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+    background: linear-gradient(to bottom, #F2F2F2 0%,#ffffff 12%,#ffffff 88%,#F2F2F2 100%); /* W3C */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E7E7E7', endColorstr='#cccccc',GradientType=0 );*/ /* IE6-9 */
 }
 
 div, i {
@@ -656,7 +649,7 @@ div, i {
 .category-container, .filter-container {
     position: relative;
     line-height: 40px;
-    border-bottom: solid 1px #e9e9e9;
+    border-bottom: solid 1px #9e9e9e;
 }
 
 .filter-container {
@@ -682,7 +675,7 @@ div, i {
 .level1 {
     padding-right: 30px;
     line-height: 35px;
-    border-bottom: solid 1px #DDD;
+    border-bottom: solid 1px #9e9e9e;
 }
 
 .category-dot, .filter-check {
@@ -967,7 +960,8 @@ border-top: solid 1px #BBB;
 
 .popover-inner {
     padding: 0;
-    border: solid 1px #3f464d;
+    border: solid 1px #9e9e9e;
+    border-top-color: #3f464d;
     border-top: none;
     max-height: 78%;
     overflow: hidden;
@@ -1163,7 +1157,7 @@ p {
     margin-top: 4px;
     width: 107px;
     height: 107px;
-    border: solid 1px #E7E7E7;
+    border: solid 1px #9e9e9e;
 }
 
     .productImg.compared {
@@ -1205,7 +1199,7 @@ p {
 
 .search-header {
     margin-top: 14px;
-    margin-bottom: 14px;
+    margin-bottom: 20px;
 }
 
 
@@ -1220,7 +1214,7 @@ p {
     bottom: 0;
     right: 0;
     z-index: 1010;
-    padding-top: 55%;
+    padding-top: 45%;
     text-align: center;
     font-size: 16pt;
 }
@@ -1306,4 +1300,9 @@ table {
 }
 .details-line {
     margin-top: 2px;
+}
+
+.fade {
+    opacity: 1;
+    -webkit-transition: none;
 }
