--- a/views/home.html
+++ b/views/home.html
@@ -9,16 +9,18 @@
     <!-- cache rating stars -->
     <img ng-repeat="star in stars" ng-src="app/img/star{{star}}.png" ng-hide="true"/>
     <div class="promotions" ng-hide="!isOnline || fatalError" s-online>
+        
         <div class="promotions-container"
              ng-swipe-left="next()" ng-swipe-right="back()">
+            
             <div class="main-promotion">
                 <div>
-                    <ul class="nav nav-tabs">
+                    <ul class="nav nav-tabs" id="promotion-tabs">
 
                         <li ng-repeat="promotion in main_promotions"
                             ng-class="{'active': isSelected(promotion)}" ng-click="select(promotion)">
-                            <a ng-href="#Promotion_{{promotion.id}}"
-                               data-toggle="tab">{{promotion.title.text}}</a>
+                            <a href="#" ng-href="#Promotion_{{promotion.id}}" data-toggle="tab">{{promotion.title.text}}</a>
+                            
                             <div class="promotion-arrow" ng-show="isSelected(promotion)"><i class="fa fa-caret-up"></i></div>
                         </li>
 
@@ -27,7 +29,7 @@
                     <div class="tab-content">
                         <div class="tab-pane"
                              ng-repeat="promotion in main_promotions"
-                             ng-class="{'active': isSelected(promotion)}" 
+                             ng-class="{'active': isSelected(promotion)}"
                              id="Promotion_{{promotion.id}}"
                              ng-show="isSelected(promotion)">
                             <div class="promotion"
