--- a/views/comparison.html
+++ b/views/comparison.html
@@ -1,10 +1,10 @@
 ﻿<div class="comparison-page">
-    <br />
-    <h2 class="filter-path">
-        תוצאות השוואה
-    </h2>
-
-    <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>
+    <div class="titles">
+        <h4 class="title">
+            תוצאות השוואה
+        </h4>
+        <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>
+    </div>
     
     <ws-loading ng-show="loading"></ws-loading>
 
