--- a/views/search.html
+++ b/views/search.html
@@ -1,34 +1,38 @@
 ﻿<div class="search-page">
 
-    <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>
+    
 
     <div ng-hide="fatalError || !isOnline">
-        <div ng-switch on="!!searchText" class="search-header">
-            <div class="search-term" ng-switch-when="true">
-                <h4 class="title">
-                    מציג תוצאות חיפוש עבור "{{searchText}}"
-                </h4>
+        <div class="titles">
+            <div ng-switch on="!!searchText" class="search-header">
+                <div class="search-term" ng-switch-when="true">
+                    <h4 class="title">
+                        מציג תוצאות חיפוש עבור "{{searchText}}"
+                    </h4>
 
+                </div>
+                <div ng-switch-default>
+                    <h4 class="title">
+
+                        <span class="ancestor" ng-if="currentCategory.parent.parent" ng-hide="true">{{currentCategory.parent.parent.title}} <span>&gt;</span> </span>
+                        <span class="parent" ng-click="selectCategoryById(currentCategory.parent.id)" ng-if="currentCategory.parent" ng-hide="true">{{currentCategory.parent.title}} <span>&gt;</span> </span>
+                        <span class="current-category">מוצרים נבחרים בקטגורית {{currentCategory.title}}</span>
+
+                    </h4>
+                    <ul class="filter-path">
+                        <li class="filters-on-path" ng-repeat="filter in selectedFilterValues.values" ng-show="isFilterValueNotEmpty(filter.value)">
+                            {{filter.value.title}} <span>|</span>
+                        </li>
+
+                        <li class="clear-filter-path" ng-show="isFilterValueNotEmpty(selectedFilterValues)">
+                            <div class="clear-filter" ng-click="clearSelectedFilterValues()">נקה סינון</div>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div ng-switch-default>
-                <h4 class="title">
-
-                    <span class="ancestor" ng-if="currentCategory.parent.parent" ng-hide="true">{{currentCategory.parent.parent.title}} <span>&gt;</span> </span>
-                    <span class="parent" ng-click="selectCategoryById(currentCategory.parent.id)" ng-if="currentCategory.parent" ng-hide="true">{{currentCategory.parent.title}} <span>&gt;</span> </span>
-                    <span class="current-category">מוצרים נבחרים בקטגורית {{currentCategory.title}}</span>
-
-                </h4>
-                <ul class="filter-path">
-                    <li class="filters-on-path" ng-repeat="filter in selectedFilterValues.values" ng-show="isFilterValueNotEmpty(filter.value)">
-                        {{filter.value.title}} <span>|</span>
-                    </li>
-
-                    <li class="clear-filter-path" ng-show="isFilterValueNotEmpty(selectedFilterValues)">
-                        <div class="clear-filter" ng-click="clearSelectedFilterValues()">נקה סינון</div>
-                    </li>
-                </ul>
-            </div>
+            <div class="back-button"><button type="button" class="btn btn-default" ng-click="goBack()">חזור</button></div>            
         </div>
+
         <ws-loading ng-show="loading"></ws-loading>
         <div class="no-products" ng-show="!loading && !currentProductsPage1.length">לצערנו לא נמצאו תוצאות עבור "{{searchText}}"</div>
         <div class="products-list-container clear"
