--- a/views/search.html
+++ b/views/search.html
@@ -47,9 +47,9 @@
                     <products-list-items products="currentProductsPage1"
                                          comparison-enabled="currentCategory.level == 2"
                                          can-check="canCheck"></products-list-items>
-                    <products-list-items products="currentProductsPage2"
+                    <!--<products-list-items products="currentProductsPage2"
                                          comparison-enabled="currentCategory.level == 2"
-                                         can-check="canCheck"></products-list-items>
+                                         can-check="canCheck"></products-list-items>-->
 
                 </div>
             </div>
