--- a/app/css/app.css
+++ b/app/css/app.css
@@ -346,8 +346,10 @@ input[type=submit].search-button {
 }
 
 .search-page .products-list-container {
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1000px;
+    padding-bottom: 100px;
 }
 
 .products-list-content {
@@ -973,7 +975,7 @@ border-top: solid 1px #BBB;
     border: solid 1px #9e9e9e;
     border-top-color: #3f464d;
     border-top: none;
-    max-height: 78%;
+    max-height: 620px;
     overflow: auto;
     overflow-x: hidden;
     border-radius: 6px 0 0 0;
@@ -1103,8 +1105,8 @@ border-top: solid 1px #BBB;
 .search-page .go-to-comparison {
     text-decoration: underline;
     font-size: 14pt;
-    display: inline-block;
-    margin-right: 20px;
+    display: block;
+    text-align: center;
 }
 
 .search-page .compare-link {
@@ -1119,9 +1121,6 @@ border-top: solid 1px #BBB;
 }
 
 .search-page .comparison-products {
-    position: relative;
-    border: 2px solid #ccc;
-    border-radius: 10px;
     width: 370px;
     height: 65px;
     display: inline-block;
@@ -1130,6 +1129,15 @@ border-top: solid 1px #BBB;
 .search-page .products-comparison-wrapper {
     margin: auto;
     text-align: center;
+    background-color: white;
+    opacity: .8;
+    width: 420px;
+    height: 85px;
+        position: relative;
+    border: 2px solid #AAA;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+
 }
 
 .search-page .comparison-products .mark-to-compare {
@@ -1267,7 +1275,7 @@ table {
     }
 
 .footer {
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 10px;
