--- a/app/css/app.css
+++ b/app/css/app.css
@@ -975,25 +975,31 @@ border-top: solid 1px #BBB;
     border: solid 1px #9e9e9e;
     border-top-color: #3f464d;
     border-top: none;
-    max-height: 620px;
-    overflow: auto;
-    overflow-x: hidden;
     border-radius: 6px 0 0 0;
     -webkit-overflow-scrolling: touch;
 }
 
+.popover-content {
+}
 
 .popover-content {
-    padding: 10px 0;
+    padding: 0;
     position: relative;
+    overflow-x: hidden;
 }
 
-.menu .nav-tabs, .menu .nav-tabs .active a, .menu .nav-tabs .active a:hover, .menu .nav-tabs li a {
+.menu .tab-content {
+    max-height: 680px;
+    overflow: auto;
+}
+
+.menu .nav-tabs li{
     border: none;
-    width: 140px;
+    width: 50%;
+    
 }
 
-    .menu .nav-tabs li a {
+   .menu .nav-tabs li a {
         padding-left: 0;
         padding-right: 0;
         margin-left: 0;
@@ -1006,27 +1012,13 @@ border-top: solid 1px #BBB;
 }
 
 .category-tab, .filter-tab {
-    position: absolute;
-    top: 0;
     border: none;
     border-radius: 0;
 }
 
 .category-tab {
     background-color: #ccc;
-    right: 0;
 }
-
-.filter-tab {
-    left: 0;
-}
-
-.menu .tab-content {
-    position: relative;
-    top: 24px;
-    margin-bottom: 13px;
-}
-
 .full-path {
     font-size: 13pt;
     margin-top: 10px;
@@ -1133,11 +1125,10 @@ border-top: solid 1px #BBB;
     opacity: .8;
     width: 420px;
     height: 85px;
-        position: relative;
+    position: relative;
     border: 2px solid #AAA;
     border-radius: 10px;
     -webkit-border-radius: 10px;
-
 }
 
 .search-page .comparison-products .mark-to-compare {
