--- a/views/search.html
+++ b/views/search.html
@@ -35,11 +35,15 @@
         <div class="no-products" ng-show="!loading && !currentProductsPage.length && !searchText">לא נמצאו מוצרים בקטגוריה {{currentCategory.title}}</div>
         <div class="products-list-container clear"
              ng-hide="loading" ng-show="currentProductsPage.length">
-            <product-pane ng-repeat="product in currentProductsPage track by product.id"
+            <product-pane ng-repeat="product in currentProductsPage1 track by product.id"
                           product="product"
                           comparison-enabled="currentCategory.level == 2"
                           can-check="canCheck"></product-pane>
 
+            <product-pane ng-repeat="product in currentProductsPage2 track by product.id"
+                          product="product"
+                          comparison-enabled="currentCategory.level == 2"
+                          can-check="canCheck"></product-pane>
         </div>
 
         <div class="footer" ng-show="!loading && currentProductsPage.length>0 && currentCategory.level == 2 && productsToCompare.length > 0">
