--- a/app/css/app.css
+++ b/app/css/app.css
@@ -303,7 +303,6 @@ input[type=submit].search-button {
     margin-left: 260px;
     position: relative;
     overflow: hidden;
-    width: 645px;
 }
 
 .promotion {
@@ -340,24 +339,35 @@ input[type=submit].search-button {
     margin-bottom: 10px;
     margin-right: 2%;
 }
-
+    
 .seasonal img {
     margin-bottom: 5%;
 }
 
-.search-page .products-list-container {
+.products-list-container {
     margin-right: auto;
     margin-left: auto;
-    max-width: 1000px;
-    padding-bottom: 100px;
+    width: 97%;
+    position: relative;
 }
-
 .products-list-content {
-    overflow: auto;
-    overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
+    direction: ltr;
+    text-align: right;
 }
+.product {
+    direction: rtl;
+}
+.products-list-stable {
+    width: 100%;
+    overflow-x: scroll;
 
+    -webkit-overflow-scrolling: touch;
+    height: 260px;
+}
+.android .products-list-stable {
+    overflow-x: auto;
+    overflow: auto;
+}
 .products-list-stable {
     position: relative;
 }
@@ -384,7 +394,6 @@ input[type=submit].search-button {
 }
 
 .products-list {
-    width: 98%;
     position: relative;
     clear: both;
 }
@@ -394,10 +403,12 @@ input[type=submit].search-button {
     background-color: white;
     float: right;
     width: 234px;
-    margin-bottom: 12px;
     position: relative;
+    margin-top: 20px;
 }
-
+.home-page .product {
+    margin-top: 0;
+}
 .product-separator {
     width: 1px;
     position: absolute;
@@ -425,17 +436,17 @@ input[type=submit].search-button {
     background-repeat: repeat-x;
 }
 
-div, i {
+/*div, i {
     user-select: none;
     -webkit-user-select: none;
-}
+}*/
 
 
 
 
 
 .product-info {
-    height: 210px;
+    height: 218px;
     padding-right: 10px;
     position: relative;
     font-size: 10pt;
@@ -451,16 +462,23 @@ div, i {
     background: url('../img/dealIcon.png') no-repeat;
     color: #9a6faa;
     text-align: center;
+    font-weight: bold;
+    font-size: 17px;
+    
+padding-left: 4px;
+padding-top: 4px;
+
 }
 
-    .discount-icon .icon-text {
-        position: absolute;
-        font-size: 13pt;
-        font-weight: bold;
-        top: 10px;
-        right: 5px;
-    }
+.discount-icon .discount-icon-text {
 
+
+}
+
+.discount-icon .discount-icon-text:after {
+    content: "%";
+    font-size: 15px;
+}
 
 
 
@@ -474,6 +492,10 @@ div, i {
     margin-top: 4px;
 }
 
+.stars img {
+    margin-top: 2px;
+    vertical-align: top;
+}
 
 
 .raters-number {
@@ -615,9 +637,10 @@ div, i {
 }
 
 .products-list-name {
-    margin-right: 20px;
     margin-bottom: 20px;
     margin-top: 20px;
+    color: #326fc0;
+    font-weight: bold;
 }
 
 .search-left-arrow, .search-right-arrow {
@@ -778,7 +801,6 @@ div, i {
     }
 
 .table-background {
-    margin-top: 15px;
     background-color: #dddddd;
     position: relative;
     border-right: solid 1px #BBB;
@@ -902,8 +924,8 @@ border-top: solid 1px #BBB;
     height: 28px;
     line-height: 28px;
     color: white;
-    font-weight: bolder;
-    width: 32px;
+    font-weight: 100;
+    width: 28px;
     min-width: 0;
 }
 
@@ -993,19 +1015,18 @@ border-top: solid 1px #BBB;
     overflow: auto;
 }
 
-.menu .nav-tabs li{
+.menu-popup .nav-tabs li {
     border: none;
     width: 50%;
-    
 }
 
-   .menu .nav-tabs li a {
-        padding-left: 0;
-        padding-right: 0;
-        margin-left: 0;
-        text-align: center;
-        border-radius: 0;
-    }
+.menu .nav-tabs li a {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    text-align: center;
+    border-radius: 0;
+}
 
 .nav li a:hover {
     background-color: transparent;
@@ -1019,6 +1040,7 @@ border-top: solid 1px #BBB;
 .category-tab {
     background-color: #ccc;
 }
+
 .full-path {
     font-size: 13pt;
     margin-top: 10px;
@@ -1064,9 +1086,10 @@ border-top: solid 1px #BBB;
     background-repeat: no-repeat;
 }
 
-.check-box.checked {
-    background-image: url("../img/compair_icon-remove.png");
-}
+    .check-box.checked {
+        background-image: url("../img/compair_icon-remove.png");
+    }
+
 .search-page .check-box, .search-page .check-box-text {
     display: block;
 }
@@ -1090,20 +1113,23 @@ border-top: solid 1px #BBB;
     z-index: 10;
     right: 0;
     top: 0;
-    background-image: url(../img/compair_icon.png);
+    /*background-image: url(../img/compair_icon.png);*/
+    background-image: url(../img/compare.png);
     background-position: right top;
     background-repeat: no-repeat;
 }
 
     .check-box.checked {
-        background-image: url(../img/compair_icon-remove.png);
+        /*background-image: url(../img/compair_icon-remove.png);*/
+        background-image: url(../img/compare-selected.png);
     }
 
 .search-page .go-to-comparison {
     text-decoration: underline;
     font-size: 14pt;
-    display: block;
+    display: inline-block;
     text-align: center;
+    margin-top: 15px;
 }
 
 .search-page .compare-link {
@@ -1128,12 +1154,14 @@ border-top: solid 1px #BBB;
     text-align: center;
     background-color: white;
     opacity: .8;
-    width: 420px;
-    height: 85px;
     position: relative;
-    border: 2px solid #AAA;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
+    border-top: 2px solid #AAA;
+    /*
+    width: 420px;
+    height: 100px;
+        border-radius: 10px;
+    -webkit-border-radius: 10px;*/
+    
 }
 
 .search-page .comparison-products .mark-to-compare {
@@ -1229,11 +1257,6 @@ p {
     padding: 0;
 }
 
-.content {
-    padding-right: 5px;
-    padding-left: 5px;
-}
-
 .back-button {
     position: absolute;
     left: 0;
@@ -1274,7 +1297,8 @@ table {
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 10px;
+    bottom: 0px;
+    z-index: 11;
 }
 
 
@@ -1314,8 +1338,202 @@ table {
     -webkit-transition: none;
 }
 
-.products-list-container, .titles {
+.titles {
     margin-right: 2%;
     margin-left: 2%;
     position: relative;
+}
+
+
+/***************************************************************************/
+.menu ul, .menu li {
+    margin: 0;
+    padding: 0;
+}
+
+.menu .menu-item {
+    line-height: 38px;
+    cursor: pointer;
+    position: relative;
+}
+
+.menu ul.collapsed li {
+    display: none;
+}
+
+.menu .menu-item.click-started .menu-item-text{
+    background-color: silver;
+}
+
+.menu .menu-item.click-ended .menu-item-text{
+    background-color: transparent;
+    -webkit-transition: background-color 1s ease-in;
+    transition: background-color 1s ease-in;
+}
+
+.menu .menu-item.selected .menu-item-text {
+    padding-right: 32px;
+}
+
+
+.menu .menu-item.selected:before,
+.menu .menu-item:after {
+    position: absolute;
+    top: 0;
+    width: 3em;
+    text-align: center;
+    font-family: "Arial Unicode MS";
+    font-size: 10px;
+}
+
+.menu .menu-item:after {
+content: "◄";
+    left: 0;
+    color: #B2B2B2;
+    font-size: 16px;
+}
+.menu .menu-item.selected:after {
+content: "▼";
+    font-size: 12px;
+}
+.menu .menu-item.selected:before {
+content: "●";
+    color: #326fc0;
+    right: 0;
+    bottom: 0;
+}
+.menu .menu-item.menu-all:after,
+.menu .menu-item.leaf:after {
+    content: "";
+}
+.menu-item-text {
+    padding-right: 8px;
+    padding-left: 8px;
+    font-weight: bold;
+    border-bottom: solid 1px #D1D1D1;
+}
+
+.menu .menu-item:last-child > .menu-item-text {
+    border-bottom: none;
+}
+
+.menu .menu-item.menu-all:last-child > .menu-item-text {
+    border-bottom: solid 1px #D1D1D1;
+}
+.menu .menu-item.selected:last-child > .menu-item-text {
+    border-bottom: solid 1px #D1D1D1;
+}
+
+.menu li.menu-item.leaf.selected {
+    color: #326fc0;
+}
+
+    .menu li.menu-item.leaf.selected:before {
+        content: "";
+    }
+
+.menu.markable li.menu-item.leaf.selected {
+    color: inherit;
+}
+
+    .menu.markable li.menu-item.leaf.selected:before {
+        content: "✓";
+        font-size: 18px;
+    }
+
+.menu.deep > ul > li > .menu-item-text {
+    display: none;
+}
+
+.menu > ul > li ul {
+    display: none;
+}
+
+.menu > ul li.selected > ul {
+    display: block;
+}
+
+.menu.selected {
+    background-color: #eeeeee;
+}
+
+    .menu.selected > ul > li.selected > ul {
+        background-color: white;
+        border-bottom: solid 1px #9e9e9e;
+    }
+
+
+
+
+.menu-popup-content {
+    width: 320px;
+    border: solid 1px #9e9e9e;
+    border-top-color: #3f464d;
+    border-top-width: 3px;
+    border-radius: 6px 0 6px 6px;
+    -webkit-border-radius: 6px 0 6px 6px;
+-webkit-box-shadow: 0px 8px 29px 0px rgba(50, 50, 50, 0.75);
+-moz-box-shadow:    0px 8px 29px 0px rgba(50, 50, 50, 0.75);
+box-shadow:         0px 8px 29px 0px rgba(50, 50, 50, 0.75);
+}
+
+.switchable > div.pane {
+    display: none;
+}
+
+.switchable.first > div.pane.first {
+    display: block;
+}
+
+.switchable.last > div.pane.last {
+    display: block;
+}
+
+.switchable.first li.first {
+    background-color: white;
+}
+
+.switchable.last li.last {
+    background-color: white;
+}
+
+.menu-popup {
+    display: none;
+    position: absolute;
+    right: 182px;
+    top: 52px;
+    z-index: 1001;
+}
+
+    .menu-popup .menu {
+        max-height: 600px;
+        overflow: auto;
+        overflow-x: hidden;
+    }
+
+    .menu-popup.visible {
+        display: block;
+    }
+
+    .menu-popup .nav-tabs {
+        margin: 0;
+    }
+
+.menu-popup-content {
+    background-color: white;
+}
+
+.comparison-page .titles {
+    margin-bottom: 0;
+}
+
+[disabled] a,
+[disabled] a:hover,
+[disabled] a:active,
+[disabled] a:visited {
+    color: #999;
+}
+
+.android .search-input input[type=text] {
+    padding-top: 6px;
 }
