--- a/app/css/app.css
+++ b/app/css/app.css
@@ -338,6 +338,7 @@ input[type=submit].search-button {
     position: relative;
     margin-bottom: 10px;
     margin-right: 2%;
+    min-height: 260px;
 }
     
 .seasonal img {
@@ -819,8 +820,12 @@ padding-top: 4px;
 
 .compare-table td, .compare-table thead th {
     border: solid 1px #f6f6f6;
+    background-color: #f6f6f6;
+    vertical-align: middle;
 }
-
+th.headcol .inner {
+    margin: 0;
+}
 .compare-table {
     table-layout: fixed;
 }
@@ -917,6 +922,7 @@ border-top: solid 1px #BBB;
 .search-page .remove-product {
     height: 20px;
     width: 28px;
+    line-height: 16px;
 }
 
 .comparison-page .remove-product {
@@ -1037,8 +1043,14 @@ border-top: solid 1px #BBB;
     border-radius: 0;
 }
 
+
 .category-tab {
     background-color: #ccc;
+}
+
+#categoryTab.category-tab.has-selected,
+.menu-popup-content.has-selected {
+    background-color: #eeeeee;
 }
 
 .full-path {
@@ -1130,6 +1142,7 @@ border-top: solid 1px #BBB;
     display: inline-block;
     text-align: center;
     margin-top: 15px;
+    margin-right: 60px;
 }
 
 .search-page .compare-link {
@@ -1144,8 +1157,8 @@ border-top: solid 1px #BBB;
 }
 
 .search-page .comparison-products {
-    width: 370px;
-    height: 65px;
+    min-height: 64px;
+    line-height: 65px;
     display: inline-block;
 }
 
@@ -1153,12 +1166,13 @@ border-top: solid 1px #BBB;
     margin: auto;
     text-align: center;
     background-color: white;
-    opacity: .8;
+    opacity: .90;
     position: relative;
     border-top: 2px solid #AAA;
-    /*
+    
+    min-height: 100px;/*
     width: 420px;
-    height: 100px;
+    
         border-radius: 10px;
     -webkit-border-radius: 10px;*/
     
@@ -1185,7 +1199,7 @@ p {
     margin-top: 4px;
     width: 107px;
     height: 107px;
-    border: solid 1px #9e9e9e;
+    border: solid 1px #e7e7e7;
 }
 
     .productImg.compared {
@@ -1467,6 +1481,7 @@ content: "●";
 
 .menu-popup-content {
     width: 320px;
+    padding-bottom: 4px;
     border: solid 1px #9e9e9e;
     border-top-color: #3f464d;
     border-top-width: 3px;
